--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -37,6 +37,7 @@
           <%= link_to "Sections",  admin_book_sections_path %>
           <%= link_to "Users",     admin_users_path %>
           <%= link_to "PreCode管理",     admin_pre_codes_path %>
+          <%= link_to "Tags",       admin_tags_path %>
 
           <% if current_user&.admin? %>
             <%= button_to "Logout",
