--- a/app/views/quizzes/sections/questions/show.html.erb
+++ b/app/views/quizzes/sections/questions/show.html.erb
@@ -28,16 +28,10 @@
     </div>
   <% end %>
 
-  <div class="flex justify-between mt-4">
-    <div>
-      <% if @prev_q %>
-        <%= link_to "← 前の問題", quiz_section_question_path(@quiz, @section, @prev_q), class: "underline" %>
-      <% end %>
+  <% if can_edit?(@question) %>
+    <div class="mb-3">
+      <%= link_to "この問題を編集", edit_quiz_section_question_path(@quiz, @section, @question),
+            class: "inline-block px-3 py-1 rounded bg-slate-900 text-white text-sm" %>
     </div>
-    <div>
-      <% if @next_q %>
-        <%= link_to "次の問題 →", quiz_section_question_path(@quiz, @section, @next_q), class: "underline" %>
-      <% end %>
-    </div>
-  </div>
+  <% end %>
 </div>
