--- a/app/views/admin/pre_codes/edit.html.erb
+++ b/app/views/admin/pre_codes/edit.html.erb
@@ -1,3 +1,3 @@
 <% content_for :title, "PreCode編集" %>
 <h1 class="text-xl font-semibold mb-4">PreCode編集</h1>
-<%= render "pre_codes/form", pre_code: @pre_code %>
+<%= render "pre_codes/form", pre_code: @pre_code, namespace: :admin %>
